--- a/assignment no 13.html
+++ b/assignment no 13.html
@@ -14,7 +14,7 @@
       <div class="card p-2 m-2 shadow ">
         <img src="bestyoutube.png" class="img-flui"/>
         <p class="text-danger my-0">9+ Best youtub channels to learn programming in 2023</p><br/><br/><br/>
-        <p class="fs-6 my-1">abhijeetkokat007</p>
+        <p class="fs-6 my-1">abhijeetkokat</p>
         <p class="fw-lighter">10000 view | 3 hours ago</p>
       </div>
     </div>
@@ -23,7 +23,7 @@
       <div class="card p-2 m-2 shadow ">
         <img src="freevideo.jpg" class="img-flui"/>
         <p class="text-danger my-0">Free video Editor Top 5 for youtube Creators</p>
-        <p class="fs-6 my-1">abhijeetkokat007</p>
+        <p class="fs-6 my-1">abhijeetkokat</p>
         <p class="fw-lighter">10000 view | 3 hours ago</p>
       </div>
     </div>
@@ -32,7 +32,7 @@
       <div class="card p-2 m-2 shadow ">
         <img src="tipsto.jpg" class="img-flui"/>
         <p class="text-danger my-0">Tips to Participate and Scceed in the youtube partner program</p>
-        <p class="fs-6 my-1">abhijeetkokat007</p>
+        <p class="fs-6 my-1">abhijeetkokat</p>
         <p class="fw-lighter">10000 view | 3 hours ago</p>
       </div>
     </div>
@@ -41,7 +41,7 @@
       <div class="card p-2 m-2 shadow ">
         <img src="shortinthe.jpg" class="img-flui"/>
         <p class="text-danger my-0">Shorts in the youtube partner program</p>
-        <p class="fs-6 my-1">abhijeetkokat007</p>
+        <p class="fs-6 my-1">abhijeetkokat</p>
         <p class="fw-lighter">1.6M view |26.3K Likes| 3 hours ago</p>
       </div>
     </div>
@@ -50,7 +50,7 @@
       <div class="card p-2 m-2 shadow ">
         <img src="youtubetoshow.avif" class="img-flui"/>
         <p class="text-danger my-0">youtube to show processing time for video after uplode giving creators more clarity</p>
-        <p class="fs-6 my-1">abhijeetkokat007</p>
+        <p class="fs-6 my-1">abhijeetkokat</p>
         <p class="fw-lighter">10000 view | 3 hours ago</p>
       </div>
     </div>
@@ -59,7 +59,7 @@
       <div class="card p-2 m-2 shadow ">
         <img src="howtostart.png" class="img-flui"/>
         <p class="text-danger my-0">How to start a youtube channel about Programming, Softwarw ,and Technology</p>
-        <p class="fs-6 my-1">abhijeetkokat007</p>
+        <p class="fs-6 my-1">abhijeetkokat</p>
         <p class="fw-lighter">10000 view | 3 hours ago</p>
       </div>
     </div>
